# Ascendia

./: .gitignore  main.py  pyproject.toml  run_tests.sh
core/: settings.py  urls.py  views.py
notes/: forms.py  models.py  tests.py  urls.py  views.py
notes/migrations/: 0001_initial.py
notes/templates/notes/: note_create.html  note_delete.html  note_detail.html  tag_create.html  tag_list.html
static/css/: animations.css  auth-pages.css  cropper-custom.css  design.css  homepage-animation.css  notifications.css  profile.css
templates/: base.html  homepage.html
users/: forms.py  models.py  tests.py  urls.py  views.py  views_auth.py
users/management/commands/: create_profiles.py
users/migrations/: 0001_initial.py  0002_alter_profile_options_alter_profile_avatar_and_more.py  0003_profile_whatsapp.py
users/templates/registration/: password_reset_email.html  password_reset_subject.txt
users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  signup.html
workspace/: forms.py  models.py  tests.py  urls.py  views.py
workspace/migrations/: 0001_initial.py
workspace/templates/workspace/: home.html  notebook_create.html  notebook_delete.html  notebook_detail.html
