[project]
name = "ascendia"
version = "0.1.0"
description = "Django app for organizing notebooks, notes and study materials"

readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # Core framework
    "django>=5.0",
    "uvicorn>=0.30",
    "gunicorn>=21.2",
    "python-dotenv>=1.0",
    "pillow>=12.0.0",
]
